# vatic_show

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  FileDialogWin.cpp  FileDialogWin.h  README.md  ReadFile.cpp  ReadFile.h  cv_key_table.h  emptyForm.cpp  emptyForm.h  emptyForm.ui  fileManage.cpp  fileManage.h  foldSetting.cpp  foldSetting.h  main.cpp  opencvlib.h  settings.cpp  settings.h  singleOptionsForm.cpp  singleOptionsForm.h  ui_utils.cpp  ui_utils.h  utils.cpp  utils.h  xml_vatic_pascal.cpp  xml_vatic_pascal.h
cereal/include/cereal/archives/: json.hpp
cmake/modules/: FindCereal.cmake
lib/: README.txt
